--- a/tets.html
+++ b/tets.html
@@ -6,15 +6,12 @@
 <body>
 
 
-<h1>This is a Headinggan</h1>
+<h1>This is a Heading1234</h1>
 <p>This is a paragraph.</p>
 <p>This is a paragraph.</p>
 
-<h1>This is a Headinggan</h1>
+<h1>This is a Heading1234</h1>
 <p>This is a paragraph.</p>
 <p>This is a paragraph.</p>
-
-
-
 </body>
 </html>
